@@ -1,6 +1,9 @@
 v3.4.6.1 (2019-06-03)
 ---------------------
 
+* Speed up collection creation process in cluster, if not all agency callbacks are
+  delivered successfully.
+
 * Fix agency's handling of object assignments with TTL
 
 v3.4.6 (2019-05-28)
